added health check endpoint
